<resources>
    <string name="app_name">QFish</string>

    <string name="deskripsi_halaman_pembuka">QFish merupakan aplikasi pengecekan kualitas ikan dengan range yang terstandar, seperti ikan reject dan ikan yang siap jual di pasar.</string>
    <string name="start_botton">Ketuk untuk masuk</string>
    <string name="unggah">UNGGAH</string>
    <string name="diterima">DITERIMA</string>
    <string name="scan">SCAN</string>
    <string name="panduan">PANDUAN</string>
    <string name="panduan_text">Panduan\nPenggunaan</string>
    <string name="panduan_1">1. Tekan tombol SCAN</string>
    <string name="panduan_2">2. Ambil gambar ikan\ndari kamera atau\ngaleri</string>
    <string name="panduan_3">3. Grade ikan akan\ntampil di layar</string>
    <string name="version">Version 1.0.0</string>
    <string name="confidence">CONFIDENCE :</string>
    <string name="presentase">50</string>
    <string name="presentase1">%</string>

</resources>