<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".panduan"
    android:fillViewport="true"
    android:background="@color/biru_dongker">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="146dp"

            android:layout_height="79dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/textPanduan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/panduan_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.061" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="126dp"
            android:layout_height="272dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/home_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPanduan"
            app:layout_constraintVertical_bias="0.084" />

        <TextView
            android:id="@+id/bingkaifoto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_panduan"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/panduan_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.649"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textPanduan" />

        <ImageView
            android:id="@+id/foto2"
            android:layout_width="126dp"
            android:layout_height="272dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/scan_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.905"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/bingkaifoto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_panduan"
            app:layout_constraintBottom_toBottomOf="@+id/foto2"
            app:layout_constraintEnd_toEndOf="@+id/foto2"
            app:layout_constraintStart_toStartOf="@+id/foto2"
            app:layout_constraintTop_toTopOf="@+id/foto2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/panduan_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/foto2"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/foto3"
            android:layout_width="126dp"
            android:layout_height="272dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ikan_tidak_reject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foto2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/panduan_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/foto3"
            app:layout_constraintTop_toBottomOf="@+id/foto2" />

        <TextView
            android:id="@+id/bingkaifoto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_panduan"
            app:layout_constraintBottom_toBottomOf="@+id/foto3"
            app:layout_constraintEnd_toEndOf="@+id/foto3"
            app:layout_constraintStart_toStartOf="@+id/foto3"
            app:layout_constraintTop_toTopOf="@+id/foto3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>